<resources>
    <string name="app_name">Atlas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <string name="splash">Splash</string>
    <string name="main">Main</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="setup">Setup</string>
    <string name="history">History</string>
    <string name="track">Track</string>

    <string name="settings">Settings</string>
    <string name="search_contacts">Search contacts</string>
    <string name="create_incident">Create Incident</string>



    <string name="setup_permission">Step 1 of 3: Setup Device Permission</string>
    <string name="setup_contact">Step 2 of 3: Select Contacts</string>
    <string name="setup_download">Step 2 of 3: Download Offline Map</string>

    <string name="msg_permission">Permission needed to run the app</string>
    <string name="msg_download">Map must be download to properly display locations</string>
    <string name="msg_close_app">Are you sure you want to close this app?</string>
    <string name="msg_permission_not_granted">Some permission are not granted</string>
    <string name="msg_incident_completed">Are you sure you want to mark this incident as completed</string>
    <string name="msg_incident_invalid">Are you sure you want to mark this incident as invalid</string>
    <string name="msg_select_contact">Please select at least 1 contact</string>




    <string name="btn_request_permission">Request Permission</string>
    <string name="btn_import">Import Contacts</string>
    <string name="btn_download">Download</string>
    <string name="btn_create">Create</string>
    <string name="btn_respond">Respond</string>



    <string name="title_report_incident">Create New Incident</string>
    <string name="nature_incident">Nature of Incident</string>
    <string name="title_incident_detail">Incident Detail</string>


    <string name="label_title">Title: </string>
    <string name="label_stat">Status: </string>
    <string name="label_reported">Reported By: </string>


    <string name="msg_success_respond">Successfully responding to the incident</string>
    <string name="msg_success_update">Successfully updated the incident</string>


    <string name="mark_invalid">Mark as Invalid</string>
    <string name="mark_completed">Mark as Completed</string>


</resources>