<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_splash">

    <fragment
        android:id="@+id/nav_splash"
        android:name="com.mjfuring.atlas.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_nav_splash_to_nav_setup"
            app:destination="@id/nav_setup"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"
            />
        <action
            android:id="@+id/action_nav_splash_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_setup"
        android:name="com.mjfuring.atlas.setup.SetupFragment"
        android:label="@string/setup"
        tools:layout="@layout/fragment_setup">

        <action
            android:id="@+id/action_nav_setup_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mjfuring.atlas.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_nav_incident_detail"
            app:destination="@id/nav_incident_detail" />
        <action
            android:id="@+id/action_nav_home_to_nav_incident_create"
            app:destination="@id/nav_incident_create" />
        <action
            android:id="@+id/action_nav_home_to_nav_history"
            app:destination="@id/nav_history" />
    </fragment>

    <fragment
        android:id="@+id/nav_incident_create"
        android:name="com.mjfuring.atlas.incident.IncidentCreate"
        android:label="@string/title_report_incident"
        tools:layout="@layout/fragment_incident_create">
        <argument
            android:name="latlong"
            app:argType="com.mjfuring.atlas.db.model.LatLong" />
    </fragment>

    <fragment
        android:id="@+id/nav_incident_detail"
        android:name="com.mjfuring.atlas.incident.IncidentDetail"
        android:label="@string/title_incident_detail"
        tools:layout="@layout/fragment_incident_detail">
        <argument
            android:name="id"
            app:argType="long" />
        <argument
            android:name="latlong"
            app:argType="com.mjfuring.atlas.db.model.LatLong" />
        <action
            android:id="@+id/action_nav_incident_detail_to_nav_track"
            app:destination="@id/nav_track" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.mjfuring.atlas.history.FragmentHistory"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_nav_history_to_nav_incident_detail"
            app:destination="@id/nav_incident_detail" />
    </fragment>


    <fragment
        android:id="@+id/nav_track"
        android:name="com.mjfuring.atlas.track.FragmentTrack"
        android:label="@string/track"
        tools:layout="@layout/fragment_track">
        <argument
            android:name="incident"
            app:argType="com.mjfuring.atlas.db.model.Incident" />
    </fragment>

</navigation>