<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_20">

            <ImageButton
                android:id="@+id/back"
                android:src="@drawable/ic_arrow_back_wide"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:paddingStart="-25dp"
                android:paddingEnd="10dp"
                android:tint="@color/color_head"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_report_incident"
                android:textColor="@color/color_head"
                android:textSize="@dimen/font_20"
                android:layout_marginTop="@dimen/margin_6"
                app:layout_constraintTop_toBottomOf="@id/back" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintBottom_toTopOf="@+id/btn_create"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/nature_incident"
                    android:imeOptions="actionGo"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_create"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:padding="17dp"
                android:text="@string/btn_create"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
