<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:mapbox_renderTextureMode="true"
            />

        <ProgressBar
            android:id="@+id/p_bar"
            android:visibility="gone"
            android:indeterminate="true"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginBottom="@dimen/height_100"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <ImageButton
            android:id="@+id/back"
            android:src="@drawable/ic_arrow_back_wide"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:paddingStart="-25dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:background="?attr/selectableItemBackground"
            android:tint="@color/color_head"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_download"
            android:textColor="@color/color_head"
            android:textSize="@dimen/font_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_6"
            app:layout_constraintTop_toBottomOf="@id/back" />


        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_child"
            android:textSize="@dimen/font_16"
            android:text="@string/msg_download"
            android:layout_margin="25dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintBottom_toTopOf="@+id/btn_download"/>


        <Button
            android:id="@+id/btn_download"
            android:visibility="invisible"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:padding="17dp"
            android:text="@string/btn_download"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>