<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_20">


            <ImageButton
                android:id="@+id/back"
                android:src="@drawable/ic_arrow_back_wide"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:paddingStart="-25dp"
                android:paddingEnd="10dp"
                android:tint="@color/color_head"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageButton
                android:id="@+id/btn_more"
                android:src="@drawable/ic_more"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:tint="@color/color_head"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_incident_detail"
                android:textColor="@color/color_head"
                android:textSize="@dimen/font_20"
                android:layout_marginTop="@dimen/margin_6"
                app:layout_constraintTop_toBottomOf="@id/back" />

            <TextView
                android:id="@+id/lbl_nature"
                android:layout_width="@dimen/width_120"
                android:layout_height="wrap_content"
                android:text="@string/label_title"
                android:textColor="@color/color_head"
                android:textSize="@dimen/font_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_nature"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintBottom_toTopOf="@id/lbl_from"
                app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                android:id="@+id/tv_nature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/color_head"
                android:textSize="@dimen/font_20"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/lbl_nature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lbl_nature"
                app:layout_constraintBottom_toBottomOf="@id/lbl_nature" />

            <TextView
                android:id="@+id/lbl_from"
                android:layout_width="@dimen/width_120"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/label_reported"
                android:textColor="@color/color_head"
                android:textSize="@dimen/font_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_nature"
                app:layout_constraintTop_toBottomOf="@id/lbl_nature"
                app:layout_constraintBottom_toTopOf="@id/lbl_status"
                app:layout_constraintVertical_chainStyle="packed"
                />

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/color_head"
                android:textSize="@dimen/font_20"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/lbl_from"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lbl_from"
                app:layout_constraintBottom_toBottomOf="@id/lbl_from" />

            <TextView
                android:id="@+id/lbl_status"
                android:layout_width="@dimen/width_120"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/label_stat"
                android:textColor="@color/color_head"
                android:textSize="@dimen/font_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_nature"
                app:layout_constraintTop_toBottomOf="@id/lbl_from"
                app:layout_constraintBottom_toTopOf="@id/rv_list"
                app:layout_constraintVertical_chainStyle="packed"
                />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/color_head"
                android:textSize="@dimen/font_20"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/lbl_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/lbl_status"
                app:layout_constraintBottom_toBottomOf="@id/lbl_status" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_20"
                app:layout_constraintTop_toBottomOf="@id/lbl_status"
                app:layout_constraintBottom_toTopOf="@id/btn_respond"
                app:layout_constraintVertical_chainStyle="packed"/>



            <Button
                android:id="@+id/btn_respond"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:padding="17dp"
                android:text="@string/btn_respond"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
